# jupyterlab-filepilot

./: .gitignore  LICENSE  README.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  publish.yml
jupyter-config/server-config/: jupyterlab_filepilot.json
jupyterlab_filepilot/: __init__.py  handlers.py
src/: handler.ts  icons.ts  index.tsx
src/components/: FileExplorer.tsx
style/: base.css
